clearing code to good reading